--- a/.gitignore
+++ b/.gitignore
@@ -2,3 +2,4 @@
 /a-place-for-salvador-allende/geckodriver.log
 /a-place-for-salvador-allende/test_files/test.py
 a-place-for-salvador-allende/test_files/*.txt
+a-place-for-salvador-allende/france/allende_in_france_streets_notes.txt
